# HeraldStack

./: .gitignore  Cargo.toml  Modelfile  README.md  README_backup.md  check-rust.sh  format-md.sh  rootREADME.md  test_minimal.jsonl  vision.jsonl
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ai-entities/: ellow.md  entity-registry.json  harald.md  kade-vox.md  liora.md  myrren.md  orin.md
ai-entities/prompts/: harald.system.txt
archetypes/role-models/: human-inspired.md
best-practices/: agentic-orchestration.md  amazon-voice-interoperability.md  anthropic.md  google.md  griptape.md
companions/: harald.md
config/: .markdownlint.json  CONFIG.md  vector-stores-registry.json
config/ethics/: LawsOfRobotics.json
data/: repo.index  repo.meta.json
docs/: CONTRIBUTING.md  DETAILED.md  DEVELOPMENT-PRINCIPLES.md  GITHUB.md  SHELL-SCRIPT-PREVENTION.md  naming-conventions.md
docs/hardware/: macbook.md
docs/migration/: DIRECTORY-REORGANIZATION.md  IMPLEMENTATION-PLAN.md  INGEST-MIGRATION-MODULAR-PLAN.md  INGEST-MIGRATION.md  MIGRATION-VERIFICATION.md  MIGRATION.md  README.md  RECOMMENDED-STRUCTURE.md  SCRIPT-CLEANUP-PLAN.md  SCRIPT-MIGRATION.md
docs/vector-search/: character-based-chunking.md  hnsw-best-practices.md  jsonl-ingestion.md  ollama-embedding-limits.md  vector-store-registry.md
goose/: goose-proxy.py
infrastructure/: aws-stack.md
integration-guides/: agentic-orchestration.md  amazon-voice-interoperability.md  anthropic.md  aws.md  cohere.md  google.md  griptape.md  haystack.md  hugging-face.md  microsoft.md  open-ai.md
integration-guides/models/: phi-3-mini-128k.md
logs/: embedding_size_test_20250721_145527.log.10  embedding_size_test_20250721_145527.log.100  embedding_size_test_20250721_145527.log.200  embedding_size_test_20250721_145527.log.300  embedding_size_test_20250721_145527.log.50  single_character_test_20250721_144212.log.full  single_character_test_20250721_144544.log.full  single_character_test_20250721_144544.log.simple
personality-archetypes/: Heralds.json  heralds.md
personality-archetypes/mythological/: human-inspired.md
personality-archetypes/pop-culture/: marvel.md
rust_ingest/: Cargo.toml  rustREADME.md
rust_ingest/src/: embed.rs  ingest.rs  lib.rs  main.rs  query.rs
scripts/: SCRIPTS.md  ask_local.py  build_rust_tools.sh  dev-reference.sh  embedding_tool.sh  ingest.sh  ingest_chunked.sh.legacy  ingest_local.py  ingest_local.py.bak  ingest_single_character.sh  query.sh  status.sh  test_embedding_size.sh.legacy  test_migration.sh  text_chunker_rust_wrapper.sh  validate_naming.sh  verify_rust_migration.sh
scripts/archive/: README.md  ingest_chunked.sh.new  ingest_marvelai.sh  ingest_single_character.sh  test_basic_embedding.sh  test_embedding_size.sh  test_text_chunker.sh  text_chunker.sh.legacy  (+2 more)
scripts/dev/: DEV.md  (+1 more)
src/: Cargo.toml  README.md  lib.rs  rustfmt.toml
src/api/: mod.rs
src/core/: mod.rs
src/core/embedding/: embedding_bin.rs  mod.rs  ollama_api.rs
src/ingest/: INGEST.md  README.md  chunked_ingest.rs  chunked_ingest_new.rs  chunked_ingest_old.rs  chunking_utils.rs  embed.rs  ingest.rs  ingest_utils.rs  lib.rs  main.rs  marvelai_ingest.rs  mod.rs  query.rs  single_character_ingest.rs  single_character_ingest_new.rs  single_character_ingest_old.rs
src/utils/: chunker_bin.rs  chunking.rs  format_json.rs  mod.rs
src/utils/json-tools/: JSON-TOOLS.md  format_json.rs  validate_json_schema.rs
src/utils/json_tools/: JSON-TOOLS.md  format_json.rs  mod.rs  validate_json_schema.rs
src/utils/system/: mod.rs  status.rs
src/utils/validation/: check_json.rs  format_md.rs  mod.rs  naming.rs  validate_naming.rs
tests/: README.md  TESTS.md
(+33 files in other folders)
