[package]
name = "rust_ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
hnsw_rs = "0.3.2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bincode = "1.3"
