[package]
name = "harald"
version = "0.1.0"
edition = "2021"
description = "A context-aware, emotionally adaptive AI framework"
authors = ["Bryan Chasko"]

[[bin]]
name = "harald_ingest"
path = "ingest/main.rs"
required-features = ["cli"]

[[bin]]
name = "text_chunker"
path = "utils/chunker_bin.rs"
required-features = ["cli"]

[[bin]]
name = "embedding_tool"
path = "core/embedding/embedding_bin.rs"
required-features = ["cli"]

[[bin]]
name = "ingest_chunked"
path = "ingest/chunked_ingest.rs"
required-features = ["cli"]

[[bin]]
name = "format_json"
path = "utils/json_tools/format_json.rs"
required-features = ["cli"]

[[bin]]
name = "validate_naming"
path = "utils/validation/validate_naming.rs"
required-features = ["cli"]

[[bin]]
name = "validate_json_schema"
path = "utils/json_tools/validate_json_schema.rs"
required-features = ["cli"]

[[bin]]
name = "format_md"
path = "utils/validation/format_md.rs"
required-features = ["cli"]

[[bin]]
name = "status"
path = "utils/system/status.rs"
required-features = ["cli"]

[[bin]]
name = "check_json"
path = "utils/validation/check_json.rs"
required-features = ["cli"]

[lib]
name = "harald"
path = "lib.rs"

[[bin]]
name = "single_character_ingest"
path = "ingest/single_character_ingest.rs"
required-features = ["cli"]

[dependencies]
rust_ingest = { path = "../../rust_ingest" }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
hnsw_rs = "0.3.2"
walkdir = "2"
clap = { version = "4", features = ["derive"], optional = true }
anyhow = "1"
bincode = "1.3"
chrono = "0.4"
colored = "2.0"
tempfile = "3.0"

[features]
default = []
cli = ["clap"]
integration-tests = []

[dev-dependencies]
mockall = "0.11.3"
async-trait = "0.1"
